tests/compile-fail/integration__integration__image_sources__anm_import_wrong_img_height.snap
---
source: tests/integration/image_sources.rs
expression: stderr
---
error: provided dimensions for 'subdir/hai-10x18.png' do not match image source: 10x32 in script, 10x18 in image source
  ┌─ <input>:9:17
  │
9 │     img_height: 32,
  │                 ^^
  │
  = image was loaded from 'tests/integration/resources/th12-embedded-image-source.anm'
  = you can remove these explicit dimensions to infer them from the image source
  = you can add another image source to override this image
  = you can use `has_image: "dummy"` to ignore the image in the source and generate dummy data


